--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <title> dasmoto</title>
-   <link href="../resources/css/style.css"type="text/css"rel="stylesheet">
+   <link href="resources/css/style.css"type="text/css"rel="stylesheet">
 </head>
 <body>
   <h1>Dasmoto'Arts & Crafts</h1><br>
